--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,9 +2,10 @@
 ---
 
 // Colors
-$primary: #e5261f;
-$primary-dark: #a01b16;
+$primary: #e62d28; // Old primary color: #e5261f
+$primary-dark: #e62d28; // Old theme color: #a01b16
 $secondary: #f88379;
+$complementary: #eb6c1d;
 $black: #2f2f41;
 $white: #ffffff;
 $white-offset: #fff6f8;
@@ -18,12 +19,12 @@ $link-hover-decoration: underline;
 
 // Fonts
 $font-family-base: Helvetica, Arial, sans-serif, -apple-system;
-$font-family-heading: "Playfair Display", serif, -apple-system;
+$font-family-heading: Arial, serif, -apple-system;
 
 // Footer
 $footer-background-color: $primary;
 $footer-text-color: $white;
-$sub-footer-background-color: darken($primary, 10%);
+$sub-footer-background-color: $complementary;
 $sub-footer-text-color: $white;
 
 // Bootstrap 5.3.2
@@ -44,12 +45,12 @@ $sub-footer-text-color: $white;
 // 4. Include optional Bootstrap components
 @import "bootstrap/root";
 @import "bootstrap/reboot";
-@import "bootstrap/type";
-@import "bootstrap/images";
+// @import "bootstrap/type";
+// @import "bootstrap/images";
 @import "bootstrap/containers";
 @import "bootstrap/grid";
-@import "bootstrap/tables";
-@import "bootstrap/forms";
+// @import "bootstrap/tables";
+// @import "bootstrap/forms";
 // @import "bootstrap/buttons";
 // @import "bootstrap/transitions";
 // @import "bootstrap/dropdown";
@@ -99,7 +100,7 @@ $sub-footer-text-color: $white;
 @import "components/intro-image";
 @import "components/strip";
 @import "components/feature";
-@import "components/social";
+// @import "components/social";
 // @import "components/fonts"; // Uncomment this line to self host font
 
 // Pages
