--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="col-12">
         <div class="footer-inner">
           <h2 class="footer-title">{{site.title}}</h2>
-          <ul>
+          <ul class="bold">
             {% assign footermenu = site.data.menus.footer | sort: 'weight'  %}
             {% for item in footermenu %}
             <li class="{% if item.url == page.url %}active{% endif %}">
