--- a/_includes/main-menu.html
+++ b/_includes/main-menu.html
@@ -2,8 +2,8 @@
   {% assign mainmenu = site.data.menus.main | sort: 'weight'  %}
   <ul>
     {% for item in mainmenu %}
-    <li class="{% if item.url == page.url %}active{% endif %}">
-      <a href="{{ item.url | relative_url }}">{{ item.name }}</a>
+    <li>
+      <a href="{{ item.url | relative_url }}" style="font-weight: bold;">{{ item.name }}</a>
     </li>
     {% endfor %}
   </ul>
