--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,9 @@
       <a href="{{ site.baseurl }}"><img width="{{ site.logo.desktop_width }}" height="{{ site.logo.desktop_height }}" alt="{{ site.title }}" src="{{ site.logo.desktop | relative_url }}" /></a>
       <a style="margin-top: 8px; font-size: 18px;" href="{{ site.baseurl }}"><strong>FIRE AND SAFETY SYSTEMS</strong></a>
     </div>
-    <div class="logo-mobile">
+    <!-- <div class="logo-mobile">
       <a href="{{ site.baseurl }}"><img width="{{ site.logo.mobile_width }}" height="{{ site.logo.mobile_height }}" alt="{{ site.title }}" src="{{ site.logo.mobile | relative_url }}" /></a>
-    </div>
+    </div> -->
     {% include main-menu.html %}
     {% include hamburger.html %}
   </div>
