--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,49 +21,38 @@ bodyClass: "page-home"
   </div>
 </div>
 
-<div class="strip">
-  <div class="container pt-6 pb-6 pb-md-10">
-    <div class="row justify-content-start">
-      {% assign limit = site.home.limit_services | default: 6 %}
-      {% for service in site.services limit: limit %}
-      <div class="col-12 col-md-4 mb-1">
-        <div class="service service-summary">
+<div class="strip mt-2">
+  <div class="container">
+    <div class="services-list">
+      <h2 class="bold">Our Products and Services</h2>
+      {% assign sorted_services = site.services | sort: "weight" %}
+      <div class="services-grid">
+        {% for service in sorted_services limit: limit %}
+        <div class="service">
           <div class="service-content">
-            <h2 class="service-title">
-              <a href="{{ service.url | relative_url }}">{{ service.title }}</a>
-            </h2>
-            <p>{{ service.excerpt | markdownify | strip_html | truncate: 100 }}</p>
+            <div class="service-image">
+              <img src="{{ service.image | relative_url }}" alt="{{ service.title }}">
+            </div>
+            <div class="service-text">
+              <h2 class="service-title bold">
+                <a href="{{ service.url | relative_url }}">{{ service.title }}</a>
+              </h2>
+              <p>{{ service.description | markdownify | strip_html }}</p>
+            </div>
           </div>
         </div>
-      </div>
-      {% endfor %}
-    </div>
-    <div class="row justify-content-center">
-      <div class="col-auto">
-        <a class="button button-primary" href="{{ "services" | relative_url }}">View All Services</a>
+        {% endfor %}
       </div>
     </div>
   </div>
 </div>
+<br>
+<br>
+<div class="strip">
+  <div class="container">
+    <h2 class="bold">Our Valued Clients</h2>
+      {% include clients.html %}
 
-{% if site.data.features %}
-<div class="strip strip-grey">
-  <div class="container pt-6 pb-6 pt-md-10 pb-md-10">
-    <div class="row justify-content-center">
-
-      {% for feature in site.data.features %}
-      <div class="col-12 col-md-6 col-lg-4 mb-2">
-        <div class="feature">
-          {% if feature.image %}
-          <div class="feature-image"><img alt="{{ feature.title }} logo" src="{{ feature.image.url | relative_url }}" width="{{ feature.image.width }}" height="{{ feature.image.height }}" /></div>
-          {% endif %}
-          <h2 class="feature-title">{{ feature.title }}</h2>
-          <div class="feature-content">{{ feature.description }}</div>
-        </div>
-      </div>
-      {% endfor %}
-
-    </div>
   </div>
 </div>
-{% endif %}
+
